--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "talib-wasm",
-  "version": "1.0.6",
+  "version": "1.1.0",
   "description": "ta-lib.org package parsed with emscripten, that can be added to browser",
-  "main": "main.js",
+  "main": "build/main.js",
   "scripts": {
-    "test": "echo 'no tests specified'"
+    "build": "bash ./build.sh && webpack",
+    "deep-update-deps": "eval $(node -e \"console.log('npm i -S ' + Object.keys(require('./package.json').dependencies).map(v => v + '@latest').join(' ') + ' && ' + 'npm i --save-dev ' + Object.keys(require('./package.json').devDependencies).map(v => v + '@latest').join(' '))\")"
   },
   "repository": {
     "type": "git",
@@ -28,5 +29,18 @@
   "bugs": {
     "url": "https://github.com/insane-jo/talib-wasm/issues"
   },
-  "homepage": "https://github.com/insane-jo/talib-wasm#readme"
+  "homepage": "https://github.com/insane-jo/talib-wasm#readme",
+  "devDependencies": {
+    "talib": "^1.1.3",
+    "uglify-js": "^3.9.1",
+    "xml2js": "^0.4.23",
+    "@babel/core": "^7.9.0",
+    "@babel/preset-env": "^7.9.5",
+    "babel-loader": "^8.1.0",
+    "babel-plugin-syntax-dynamic-import": "^6.18.0",
+    "uglifyjs": "^2.4.11",
+    "webpack": "^4.43.0",
+    "webpack-cli": "^3.3.11",
+    "xml-loader": "^1.2.1"
+  }
 }
