--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "build/main.js",
   "scripts": {
     "build": "bash ./build.sh && webpack",
-    "deep-update-deps": "eval $(node -e \"console.log('npm i -S ' + Object.keys(require('./package.json').dependencies).map(v => v + '@latest').join(' ') + ' && ' + 'npm i --save-dev ' + Object.keys(require('./package.json').devDependencies).map(v => v + '@latest').join(' '))\")"
+    "deep-update-deps": "eval $(node -e \"console.log('npm i -S ' + Object.keys(require('./package.json').dependencies || {}).map(v => v + '@latest').join(' ') + ' && ' + 'npm i --save-dev ' + Object.keys(require('./package.json').devDependencies).map(v => v + '@latest').join(' '))\")"
   },
   "repository": {
     "type": "git",
@@ -31,16 +31,16 @@
   },
   "homepage": "https://github.com/insane-jo/talib-wasm#readme",
   "devDependencies": {
-    "talib": "^1.1.3",
-    "uglify-js": "^3.9.1",
-    "xml2js": "^0.4.23",
-    "@babel/core": "^7.9.0",
-    "@babel/preset-env": "^7.9.5",
+    "@babel/core": "^7.9.6",
+    "@babel/preset-env": "^7.9.6",
     "babel-loader": "^8.1.0",
     "babel-plugin-syntax-dynamic-import": "^6.18.0",
+    "talib": "^1.1.3",
+    "uglify-js": "^3.9.2",
     "uglifyjs": "^2.4.11",
     "webpack": "^4.43.0",
     "webpack-cli": "^3.3.11",
-    "xml-loader": "^1.2.1"
+    "xml-loader": "^1.2.1",
+    "xml2js": "^0.4.23"
   }
 }
